--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Payment/PaymentVerification.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Payment/PaymentVerification.cshtml
@@ -15,6 +15,7 @@
     <div class="form-group">
         <label for="paymentVerification">Payment Verification Code:</label>
         <input type="text" class="form-control" id="paymentVerification" name="paymentVerification" required>
+        <input type="hidden" name="id" value="@ViewBag.ItemId" />
     </div>
     @if (ViewBag.PaymentSuccess != null && ViewBag.PaymentSuccess)
     {
