--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
@@ -62,10 +62,10 @@
 
 </style>
 
-<h1>Add Diseases</h1>
 
 <div class="row container">
-    <div class="col-md-8">
+    <div class="col-md-8 mt-4">
+        <h1>Add Diseases</h1>
         <div class="form-container">
 
             <form asp-action="Create" enctype="multipart/form-data">
