--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Home.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Home.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div class="row container d-flex mt-5 pt-4">
+<div class="row container d-flex" style="margin-top:105px;">
 
     <h1 class="text-left" style="margin-left:50px">Disease Details</h1>
     @foreach (var disease in Model)
