--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Home.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Home.cshtml
@@ -15,7 +15,7 @@
 
 <div class="row mt-4">
     <!-- Add some top margin to the row -->
-    <div class="col-12">
+    <div class="col-12" style="margin-top:20px;">
         <!-- Create a full-width column to contain the heading -->
         <h1 class="mt-5 mb-3" style="padding: 5px 15px; border-bottom: 1px solid #ddd;">Medicines by Category: @ViewBag.Category</h1>
     </div>
