--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MedicineManagement.styles.css" asp-append-version="true" />
     <style>
+        html a{
+            font-family: monospace;
+        }
 
         #helloLink.active {
             background-color: #5893d4; /* Set the desired background color */
@@ -26,7 +29,7 @@
         ul li a {
             display: block;
             color: white;
-            font-weight: bold;
+            
             text-decoration: none;
             font-size: 20px;
             padding: 10px 20px;
@@ -63,12 +66,15 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow fixed-top" style="background-color: #244b81; width:100%">
             @*  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow" style="background-color: #244b81; width:100%">*@
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold text-white ps-4" style="font-size: 20px; font-weight: bold;" asp-area="" asp-controller="Home" asp-action="Index">MedicineRetail</a>
+                <div style="display:flex">
+                    <img src="~/images/Medint.png" alt="Logo" height="78" class="d-inline-block align-text-top">
+                    <a class="navbar-brand font-weight-bold text-white" style="font-size: 20px; font-weight: bold; margin-top:20px;" asp-area="" asp-controller="Home" asp-action="Index">Med-Ent</a>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end" style="margin-right:40px;">
                     <!-- Use justify-content-end to align items to the right -->
                     <ul class="navbar-nav">
                         @if (User.Identity.IsAuthenticated)
@@ -93,7 +99,7 @@
                                 <a class="nav-link text-light" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Registration" asp-action="Index">Registration</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Registration" asp-action="Index">SignUp</a>
                             </li>
                         }
                     </ul>
@@ -104,7 +110,7 @@
     </header>
     <div style="display: flex; flex-direction: row; height: 100%;">
         <!-- Sidebar -->
-        <div class="sidebar" style="width: 200px; background-color: cadetblue; color: white; height: 100%; position: fixed; display: flex; flex-direction: column; align-items: center;">
+        <div class="sidebar" style="width: 200px; background-color: cadetblue; color: white; height: 100%; position: fixed; display: flex; flex-direction: column; align-items: center; margin-top:30px;">
             <ul style="list-style-type: none; padding: 0;">
                 <li style="margin-bottom: 100px; margin-top: 90px; text-align: center;">
                     <a href="/Disease/Create" class="disease-link">Disease</a>
@@ -121,8 +127,8 @@
         </div>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color: #244b81; color: white; position: fixed; bottom: 0; width: 100%; min-height: 70px;">
-        <div class="container mb-3">
+    <footer class="" style="background-color: #244b81; color: white; position:fixed; bottom: 0; width: 100%; height:72px;">
+        <div class="container mb-3 text-muted" style="margin-top:20px; margin-right:208px;">
             &copy; 2023 MedicineRetail Terms & Privacy
         </div>
     </footer>
