--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/_Layout.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/_Layout.cshtml
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="~/MedicineManagement.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
     <style>
+        html *{
+            font-family: monospace;
+        }
+
+        ul li{
+            margin-right:20px;
+        }
 
         ul li a.active {
             /*  background-color:lightskyblue;*/
@@ -26,7 +33,7 @@
         ul li a {
             display: block;
             color: white;
-            font-weight: bold;
+            font-weight:bold;
             text-decoration: none;
             font-size: 20px;
             padding: 10px 20px;
@@ -48,12 +55,15 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #244b81;">
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold text-white" style="font-size: 20px; font-weight: bold;" asp-area="" asp-controller="Home" asp-action="Index">MedicineRetail</a>
+                <div style="display:flex">
+                <img src="~/images/Medint.png" alt="Logo" height="78" class="d-inline-block align-text-top">
+                <a class="navbar-brand font-weight-bold text-white" style="font-size: 20px; font-weight: bold; margin-top:20px;" asp-area="" asp-controller="Home" asp-action="Index">Med-Ent</a>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end" style="margin-right:40px;">
                     <!-- Use justify-content-end to align items to the right -->
                     <ul class="navbar-nav">
                         @if (User.Identity.IsAuthenticated)
@@ -91,7 +101,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light font-weight-bold @(ViewContext.RouteData.Values["Controller"].ToString() == "Registration" && ViewContext.RouteData.Values["Action"].ToString() == "Index" ? "active" : "")"
-                                   asp-area="" asp-controller="Registration" asp-action="Index">Registration</a>
+                                   asp-area="" asp-controller="Registration" asp-action="Index">SignUp</a>
                             </li>
                         }
                     </ul>
@@ -102,13 +112,13 @@
 
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" >
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color: #244b81; color: white; position: fixed; bottom: 0; width: 100%;">
-        <div class="container mb-3">
+    <footer class="" style="background-color: #244b81; color: white; position:fixed; bottom: 0; width: 100%; height: 72px;">
+        <div class="container mb-3 text-muted" style="margin-top:20px; margin-right:208px;">
             &copy; 2023 MedicineRetail Terms & Privacy
         </div>
     </footer>
